--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Concert+One|Passion+One|Roboto+Condensed" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Acme|Concert+One|Passion+One|Roboto+Condensed" rel="stylesheet">
     <title>TrailMagic</title>
 </head>
 
@@ -92,7 +92,7 @@
                             alt=""></div>
                 </div>
 
-                <h2>Trail Magic is an unexpected act of kindness that a past hiker has prepared and left on the trail
+                <h2 style="font-family: 'Acme', sans-serif; padding: 3px; text-align: center">Trail Magic is an unexpected act of kindness that a past hiker has prepared and left on the trail
                     for a future hiker to find. These simple acts are often a memorable and impactful part of
                     the
                     Appalachian Trail experience
